# stellarFutarchy

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
contracts/conditional_vault/: Cargo.toml
contracts/conditional_vault/src/: lib.rs  test.rs
contracts/dao/: Cargo.toml
contracts/dao/src/: lib.rs
contracts/factory/src/: lib.rs
contracts/futarchy_amm/: Cargo.toml
contracts/futarchy_amm/src/: lib.rs
frontend/: package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dao/[id]/: page.tsx
frontend/src/app/docs/: layout.tsx  page.tsx
frontend/src/app/docs/benefits/founders/: page.tsx
frontend/src/app/docs/benefits/investors/: page.tsx
frontend/src/app/docs/governance/markets/: page.tsx
frontend/src/app/docs/governance/overview/: page.tsx
frontend/src/app/docs/governance/proposals/: page.tsx
frontend/src/app/docs/governance/twaps/: page.tsx
frontend/src/app/docs/how-launches-work/are-you-ready/: page.tsx
frontend/src/app/docs/how-launches-work/bid-wall/: page.tsx
frontend/src/app/docs/how-launches-work/create/: page.tsx
frontend/src/app/docs/how-launches-work/sale/: page.tsx
frontend/src/app/docs/how-launches-work/stamp/: page.tsx
frontend/src/app/docs/protocol/analytics/: page.tsx
frontend/src/app/projects/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/: ConnectWallet.tsx  DaoCard.tsx  Logo.tsx  Navbar.tsx  ProposalCard.tsx  RegisterForm.tsx  TradePanel.tsx  WalletProvider.tsx
frontend/src/lib/: constants.ts  contracts.ts  stellar.ts  wallet.ts
scripts/: deploy.sh
(+3 files in other folders)
