[workspace]
resolver = "2"
members = [
    "contracts/conditional_vault",
    "contracts/futarchy_amm",
    "contracts/dao",
    "contracts/factory",
]

[workspace.dependencies]
soroban-sdk = "22.0.5"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
